k8s/apps/y-2024/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-2024
spec:
  replicas: 1
  selector:
    matchLabels:
      app: y-2024
  template:
    metadata:
      labels:
        app: y-2024
    spec:
      containers:
        - name: y-2024
          image: ghcr.io/walnuts1018/2024-y:d0ad46d340d53cc515b9cdc735caf53184a8e9c0-3 # {"$imagepolicy": "default:y-2024"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 1m
              memory: 32Mi
      nodeSelector:
        kubernetes.io/arch: amd64
