k8s/apps/y-2024/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-readme-stats
spec:
  ingressClassName: "nginx"
  rules:
    - host: "y.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: y-2024
                port:
                  number: 8080
